# MyoMod-Electrode6Chn

./: CMakeLists.txt  EMGLogger.cpp  Main.cpp  README.md  blockschematic.drawio  comInterface.cpp  comInterface.h  debug_pins.h  i2c.cpp  max11254.cpp  max11254.h  max11254_hal.cpp  max11254_hal.h  processingUnit.cpp  processingUnit.h  specificRegisters.h  stateDisplay.cpp  stateDisplay.h  timerSync.cpp  timerSync.h  usbInterface.c  usbInterface.h  usb_descriptors.c
